--- a/src/Locale_itl.properties
+++ b/src/Locale_itl.properties
@@ -31,5 +31,6 @@ parameters=\u0053\u0070\u0065\u0063\u0069\u0066\u0069\u0063\u0061\u0020\u0069\u0
 searchfield=Immettere un nome per la ricerca
 settings=\u0049\u006d\u0070\u006f\u0073\u0074\u0061\u007a\u0069\u006f\u006e\u0069
 table=\u0054\u0061\u0076\u006f\u006c\u006f
+tryagain=Riprova.
 update=Modificare
 view=\u0056\u0069\u0073\u0075\u0061\u006c\u0069\u007a\u007a\u0061
