--- a/src/Locale_fin.properties
+++ b/src/Locale_fin.properties
@@ -3,6 +3,7 @@ addifminneg=\u0054\u00e4\u006d\u00e4\u0020\u0065\u006c\u0065\u006d\u0065\u006e\u
 addnewpersonerror=\u004d\u0075\u0075\u0074\u0061\u0020\u0068\u0065\u006e\u006b\u0069\u006c\u00f6\u0020\u002d\u0076\u0061\u006c\u0069\u006b\u006f\u006e\u0020\u0061\u0076\u0061\u0061\u006d\u0069\u0073\u0065\u0073\u0073\u0061\u0020\u0074\u0061\u0070\u0061\u0068\u0074\u0075\u0069\u0020\u0076\u0069\u0072\u0068\u0065
 alert=Huomio!
 center=\u004b\u0065\u0073\u006b\u0075\u0073\u0074\u0061
+choosescript=Valitse komentosarja
 clearquestion=Haluatko poistaa kaikki kohteesi?
 collectioncontain=\u004b\u006f\u006b\u006f\u0065\u006c\u006d\u0061\u0020\u0073\u0069\u0073\u00e4\u006c\u0074\u00e4\u00e4\u0020
 console=\u004b\u006f\u006e\u0073\u006f\u006c\u0069
@@ -11,6 +12,7 @@ country=Kansalaisuus
 creationdate=\u006c\u0075\u006f\u006d\u0069\u0073\u0070\u00e4\u0069\u0076\u00e4
 delete=Poistaa
 error=Virhe!
+executescript=Suorita komentosarja
 exit=\u0055\u006c\u006f\u0073\u0074\u0075\u006c\u006f
 eyecolor=\u0053\u0069\u006c\u006d\u0069\u0065\u006e\u0020\u0076\u00e4\u0072\u0069
 filter=Vain ainutlaatuinen kasvu
@@ -25,9 +27,11 @@ language=\u004b\u0069\u0065\u006c\u0069
 lastcommands=Uusimmat komennot
 location=Sijainti
 name=\u004e\u0069\u006d\u0069
+nosuchscript=\u0053\u0065\u006c\u006c\u0061\u0069\u0073\u0074\u0061\u0020\u006b\u00e4\u0073\u0069\u006b\u0069\u0072\u006a\u006f\u0069\u0074\u0075\u0073\u0074\u0061\u0020\u0065\u0069\u0020\u006f\u006c\u0065
 objects=\ kohdetta
 owner=Omistaja
 parameters=\u004d\u00e4\u00e4\u0072\u0069\u0074\u00e4\u0020\u0068\u0065\u006e\u006b\u0069\u006c\u00f6\u006e\u0020\u0070\u0061\u0072\u0061\u006d\u0065\u0074\u0072\u0069\u0074\u002e
+scriptexecuted=Komentosarja suoritettu onnistuneesti
 searchfield=\u004b\u0069\u0072\u006a\u006f\u0069\u0074\u0061\u0020\u0065\u0074\u0073\u0069\u0074\u0074\u00e4\u0076\u00e4\u0020\u006e\u0069\u006d\u0069
 settings=\u0061\u0073\u0065\u0074\u0075\u006b\u0073\u0065\u0074
 table=\u0050\u00f6\u0079\u0074\u00e4
