--- a/src/Locale_itl.properties
+++ b/src/Locale_itl.properties
@@ -3,6 +3,7 @@ addifminneg=\u0051\u0075\u0065\u0073\u0074\u006f\u0020\u0065\u006c\u0065\u006d\u
 addnewpersonerror=\u0053\u0069\u0020\u00e8\u0020\u0076\u0065\u0072\u0069\u0066\u0069\u0063\u0061\u0074\u006f\u0020\u0075\u006e\u0020\u0065\u0072\u0072\u006f\u0072\u0065\u0020\u0064\u0075\u0072\u0061\u006e\u0074\u0065\u0020\u006c\u0027\u0061\u0070\u0065\u0072\u0074\u0075\u0072\u0061\u0020\u0064\u0065\u006c\u0020\u006d\u0065\u006e\u0075\u0020\u0043\u0061\u006d\u0062\u0069\u0061\u0020\u0070\u0065\u0072\u0073\u006f\u006e\u0061
 alert=Attenzione!
 center=\u0043\u0065\u006e\u0074\u0072\u006f
+choosescript=Seleziona script
 clearquestion=Vuoi eliminare tutti i tuoi oggetti?
 collectioncontain=La collezione contiene 
 console=\u0043\u006f\u006e\u0073\u006f\u006c\u006c\u0065
@@ -11,6 +12,7 @@ country=\u004e\u0061\u007a\u0069\u006f\u006e\u0061\u006c\u0069\u0074\u00e0
 creationdate=data di creazione
 delete=Elimina
 error=Sbaglio!
+executescript=Esegui script
 exit=\u0050\u0072\u006f\u0064\u0075\u007a\u0069\u006f\u006e\u0065
 eyecolor=Colore degli occhi
 filter=Solo crescita unica
@@ -25,9 +27,11 @@ language=\u004c\u0069\u006e\u0067\u0075\u0061
 lastcommands=Ultimi comandi
 location=Posizione
 name=\u004e\u006f\u006d\u0065
+nosuchscript=Non esiste un tale script
 objects=\ oggetti
 owner=Proprietario
 parameters=\u0053\u0070\u0065\u0063\u0069\u0066\u0069\u0063\u0061\u0020\u0069\u0020\u0070\u0061\u0072\u0061\u006d\u0065\u0074\u0072\u0069\u0020\u0064\u0065\u006c\u006c\u0061\u0020\u0070\u0065\u0072\u0073\u006f\u006e\u0061\u002e
+scriptexecuted=Script eseguito con successo
 searchfield=Immettere un nome per la ricerca
 settings=\u0049\u006d\u0070\u006f\u0073\u0074\u0061\u007a\u0069\u006f\u006e\u0069
 table=\u0054\u0061\u0076\u006f\u006c\u006f
